--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -7,7 +7,7 @@
         <%= f.input :address %>
         <%= f.input :phone_number %>
         <%= f.input :category, collection: Restaurant::CATEGORIES %>
-        <%= f.submit %>
+        <%= f.submit class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
